--- a/css/style.css
+++ b/css/style.css
@@ -4,17 +4,17 @@
     box-sizing: border-box;
     font-family: "Poppins", serif;
 }
-
 body {
     height: 100vh;
     width: 100vw;
     padding: 16px;
     background: rgb(1, 82, 152);
-    background: linear-gradient(135deg,
-            rgba(1, 82, 152, 1) 0%,
-            rgba(122, 184, 239, 1) 100%);
+    background: linear-gradient(
+        135deg,
+        rgba(1, 82, 152, 1) 0%,
+        rgba(122, 184, 239, 1) 100%
+    );
 }
-
 .countner {
     display: flex;
     flex-direction: column;
@@ -24,17 +24,11 @@ body {
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     background-color: #fff;
 }
-
 header {
     display: flex;
     align-items: center;
     gap: 10px;
 }
-header h1{
-    font-size: 30px;
-}
-
-
 form {
     width: 100%;
     display: flex;
@@ -42,42 +36,36 @@ form {
     justify-content: space-between;
     gap: 10px;
 }
-
 form input {
     width: 80%;
 }
-
 form input,
 form button {
     padding: 8px 14px;
     outline: none;
     border-radius: 4px;
 }
-
 form input {
     border: 1px #8c8c8c solid;
 }
-
 form button {
     border: 1px #8c8c8c solid;
     border: none;
     background-color: #3333ff;
     color: #fff;
 }
-
 .todo {
+    position: relative;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
 }
-
 .todo .todo-con {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     gap: 16px;
     font-size: 18px;
 }
-
 .todo button {
     display: flex;
     align-items: center;
@@ -85,11 +73,38 @@ form button {
     border: none;
     background-color: transparent;
 }
-
 .list {
     display: flex;
     flex-direction: column;
     gap: 18px;
 }
 
+
+.compTodo{
+  text-decoration: line-through;
+  color: #6E6E6E;
+}
+.poupWin{
+  display: none;
+  align-items: center;
+  justify-content: end;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  position: absolute;
+  left: 0;
+  top: 0;
+  
+}
+.popupChi{display: flex;
+    flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 12px;
+  width: 200px;
+  height: 80px;
+  padding: 12px;
+  border-radius: 6px;
+  background-color: white;
+  box-shadow: 0 2px 12px -6px black;
 }
